--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
     "@angular/material": "^19.2.7",
+    "@angular/material-moment-adapter": "^19.2.15",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "angular-filepicker": "^1.1.4",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "ngx-file-drop": "^16.0.0",
     "ngx-mask": "^19.0.6",
     "rxjs": "~7.8.0",
